[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Level4.gd" type="Script" id=1]
[ext_resource path="res://Levels/Environment/grass.tres" type="TileSet" id=2]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Cheese.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Teleporter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/cat.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 22.246, 265.641, 0, 0, 0, 0, 22.246, 112.514, 0, 0, 0, 0, 21.6463, 266.228, 0, 0, 0, 0, 21.9981, 111.304 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 54.2696, 260.857, 0, 0, 0, 0, 53.1888, 188.989, 0, 0, 0, 0, 54.8099, 260.857 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 167.205, 230.057, 0, 0, 0, 0, 166.664, 319.757, 0, 0, 0, 0, 167.745, 229.516 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 199.626, 151.164, 0, 0, 0, 0, 297.972, 150.624, 0, 0, 0, 0, 198.005, 150.624 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 87.9441, 23.3323, 0, 0, 0, 0, 225.936, 23.3323, 0, 0, 0, 0, 88.6075, 22.6689 )
}

[node name="Level4" type="Node"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 3, 0, -327678, 3, 0, -327677, 3, 0, -327676, 3, 0, -327675, 1, 0, -327674, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, -262125, 1, 0, -262124, 1, 0, -262123, 1, 0, -262122, 1, 0, -262121, 1, 0, -262120, 1, 0, -262119, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -196590, 3, 0, -196589, 3, 0, -196588, 3, 0, -196587, 3, 0, -196586, 3, 0, -196585, 3, 0, -196584, 3, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -65543, 1, 0, -65542, 3, 0, -65541, 3, 0, -65540, 3, 0, -65539, 3, 0, -65538, 3, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -131056, 3, 0, -131055, 3, 0, -131054, 3, 0, -131053, 3, 0, -131052, 3, 0, -131051, 3, 0, -131050, 3, 0, -131049, 3, 0, -131048, 3, 0, -131047, 3, 0, -131046, 3, 0, -131045, 1, 0, -131044, 1, 0, -7, 1, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0, -65508, 1, 0, 65529, 1, 0, 65530, 3, 0, 65531, 3, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 1, 0, 13, 1, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 0, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 1, 0, 131065, 1, 0, 131066, 3, 0, 131067, 3, 0, 131068, 0, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 0, 0, 65539, 3, 0, 65540, 0, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 0, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 0, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 0, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 1, 0, 65565, 1, 0, 196601, 1, 0, 196602, 3, 0, 196603, 3, 0, 196604, 0, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 0, 0, 131075, 3, 0, 131076, 0, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 0, 0, 131081, 3, 0, 131082, 3, 0, 131083, 0, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 0, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 0, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 0, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 1, 0, 262137, 1, 0, 262138, 3, 0, 262139, 3, 0, 262140, 0, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 0, 0, 196611, 3, 0, 196612, 0, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 0, 0, 196617, 3, 0, 196618, 3, 0, 196619, 0, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 0, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 0, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 0, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 1, 0, 327673, 1, 0, 327674, 3, 0, 327675, 3, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 0, 0, 262147, 3, 0, 262148, 0, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 0, 0, 262153, 3, 0, 262154, 3, 0, 262155, 0, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 0, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 0, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 0, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 1, 0, 393209, 1, 0, 393210, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 393214, 3, 0, 393215, 3, 0, 327680, 0, 0, 327681, 3, 0, 327682, 0, 0, 327683, 3, 0, 327684, 0, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 0, 0, 327689, 3, 0, 327690, 3, 0, 327691, 0, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 0, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 0, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 0, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 0, 0, 393217, 3, 0, 393218, 0, 0, 393219, 3, 0, 393220, 0, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 0, 0, 393225, 3, 0, 393226, 3, 0, 393227, 0, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 0, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 0, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 0, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 3, 0, 524284, 3, 0, 524285, 3, 0, 524286, 3, 0, 524287, 3, 0, 458752, 0, 0, 458753, 3, 0, 458754, 0, 0, 458755, 3, 0, 458756, 0, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 1, 0, 458761, 3, 0, 458762, 3, 0, 458763, 0, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 0, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 0, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 0, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 3, 0, 589820, 3, 0, 589821, 3, 0, 589822, 3, 0, 589823, 3, 0, 524288, 0, 0, 524289, 3, 0, 524290, 0, 0, 524291, 3, 0, 524292, 0, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 1, 0, 524297, 3, 0, 524298, 3, 0, 524299, 0, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 0, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 1, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 0, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 3, 0, 655356, 3, 0, 655357, 3, 0, 655358, 3, 0, 655359, 3, 0, 589824, 0, 0, 589825, 3, 0, 589826, 0, 0, 589827, 3, 0, 589828, 0, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 0, 0, 589833, 3, 0, 589834, 3, 0, 589835, 0, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 1, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 0, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 1, 0, 720889, 1, 0, 720890, 3, 0, 720891, 3, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 0, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 0, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 0, 0, 655369, 3, 0, 655370, 3, 0, 655371, 0, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 0, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 1, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 0, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 1, 0, 786425, 1, 0, 786426, 3, 0, 786427, 3, 0, 786428, 3, 0, 786429, 3, 0, 786430, 3, 0, 786431, 3, 0, 720896, 0, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 0, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 0, 0, 720905, 3, 0, 720906, 3, 0, 720907, 0, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 0, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 0, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 0, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 1, 0, 851961, 1, 0, 851962, 1, 0, 851963, 3, 0, 851964, 3, 0, 851965, 3, 0, 851966, 3, 0, 851967, 3, 0, 786432, 0, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 0, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 0, 0, 786441, 3, 0, 786442, 3, 0, 786443, 0, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 0, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 0, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 0, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 1, 0, 917498, 1, 0, 917499, 3, 0, 917500, 3, 0, 917501, 3, 0, 917502, 3, 0, 917503, 3, 0, 851968, 1, 0, 851969, 3, 0, 851970, 0, 0, 851971, 3, 0, 851972, 0, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 0, 0, 851977, 3, 0, 851978, 3, 0, 851979, 0, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 0, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 0, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 0, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 1, 0, 983034, 1, 0, 983035, 3, 0, 983036, 3, 0, 983037, 3, 0, 983038, 3, 0, 983039, 3, 0, 917504, 1, 0, 917505, 3, 0, 917506, 0, 0, 917507, 3, 0, 917508, 0, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 0, 0, 917513, 3, 0, 917514, 3, 0, 917515, 0, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 0, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 0, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 0, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 1, 0, 1048570, 1, 0, 1048571, 3, 0, 1048572, 3, 0, 1048573, 3, 0, 1048574, 3, 0, 1048575, 3, 0, 983040, 0, 0, 983041, 3, 0, 983042, 0, 0, 983043, 3, 0, 983044, 0, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 0, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 0, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 0, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 1, 0, 1114106, 1, 0, 1114107, 1, 0, 1114108, 3, 0, 1114109, 3, 0, 1114110, 3, 0, 1114111, 3, 0, 1048576, 0, 0, 1048577, 3, 0, 1048578, 0, 0, 1048579, 3, 0, 1048580, 0, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 0, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 0, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 0, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 1, 0, 1048604, 1, 0, 1179643, 1, 0, 1179644, 3, 0, 1179645, 3, 0, 1179646, 3, 0, 1179647, 3, 0, 1114112, 0, 0, 1114113, 3, 0, 1114114, 0, 0, 1114115, 3, 0, 1114116, 0, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 0, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 3, 0, 1114133, 3, 0, 1114134, 3, 0, 1114135, 0, 0, 1114136, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1114139, 3, 0, 1114140, 1, 0, 1245179, 1, 0, 1245180, 1, 0, 1245181, 3, 0, 1245182, 3, 0, 1245183, 3, 0, 1179648, 0, 0, 1179649, 3, 0, 1179650, 0, 0, 1179651, 3, 0, 1179652, 0, 0, 1179653, 3, 0, 1179654, 3, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 0, 0, 1179672, 3, 0, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 1, 0, 1310716, 1, 0, 1310717, 3, 0, 1310718, 3, 0, 1310719, 3, 0, 1245184, 0, 0, 1245185, 3, 0, 1245186, 0, 0, 1245187, 3, 0, 1245188, 0, 0, 1245189, 3, 0, 1245190, 3, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245195, 3, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 3, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 0, 0, 1245208, 3, 0, 1245209, 3, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 1, 0, 1376252, 1, 0, 1376253, 3, 0, 1376254, 3, 0, 1376255, 3, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 2, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 0, 0, 1310744, 3, 0, 1310745, 3, 0, 1310746, 3, 0, 1310747, 1, 0, 1310748, 1, 0, 1441788, 1, 0, 1441789, 1, 0, 1441790, 3, 0, 1441791, 3, 0, 1376256, 3, 0, 1376257, 3, 0, 1376258, 3, 0, 1376259, 3, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 3, 0, 1376265, 3, 0, 1376266, 3, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 0, 1376280, 3, 0, 1376281, 3, 0, 1376282, 1, 0, 1376283, 1, 0, 1507325, 1, 0, 1507326, 1, 0, 1507327, 3, 0, 1441792, 3, 0, 1441793, 3, 0, 1441794, 3, 0, 1441795, 3, 0, 1441796, 3, 0, 1441797, 3, 0, 1441798, 3, 0, 1441799, 3, 0, 1441800, 3, 0, 1441801, 3, 0, 1441802, 3, 0, 1441803, 3, 0, 1441804, 3, 0, 1441805, 3, 0, 1441806, 3, 0, 1441807, 3, 0, 1441808, 3, 0, 1441809, 3, 0, 1441810, 3, 0, 1441811, 3, 0, 1441812, 3, 0, 1441813, 3, 0, 1441814, 3, 0, 1441815, 3, 0, 1441816, 3, 0, 1441817, 1, 0, 1441818, 1, 0, 1572862, 1, 0, 1572863, 3, 0, 1507328, 3, 0, 1507329, 3, 0, 1507330, 3, 0, 1507331, 3, 0, 1507332, 3, 0, 1507333, 3, 0, 1507334, 3, 0, 1507335, 3, 0, 1507336, 3, 0, 1507337, 3, 0, 1507338, 3, 0, 1507339, 3, 0, 1507340, 3, 0, 1507341, 3, 0, 1507342, 3, 0, 1507343, 3, 0, 1507344, 3, 0, 1507345, 3, 0, 1507346, 3, 0, 1507347, 3, 0, 1507348, 3, 0, 1507349, 1, 0, 1507350, 1, 0, 1507351, 1, 0, 1507352, 1, 0, 1507353, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -21.3759, 40.4143 )

[node name="Cheese" parent="." instance=ExtResource( 4 )]
position = Vector2( 55.3864, 307.069 )

[node name="Teleporter1" parent="." instance=ExtResource( 5 )]
position = Vector2( 22.8736, 310.983 )

[node name="Teleporter2" parent="." instance=ExtResource( 5 )]
position = Vector2( 56.1236, 23.1332 )

[node name="Teleporter3" parent="." instance=ExtResource( 5 )]
position = Vector2( 168.224, 280.583 )

[node name="Teleporter4" parent="." instance=ExtResource( 5 )]
position = Vector2( 278.424, 23.1332 )

[node name="loc1" type="Node2D" parent="."]
position = Vector2( 288.905, 258.573 )

[node name="loc2" type="Node2D" parent="."]
position = Vector2( 346.623, 308.993 )

[node name="loc3" type="Node2D" parent="."]
position = Vector2( 278.954, 81.4398 )

[node name="loc4" type="Node2D" parent="."]
position = Vector2( 55.3812, 279.139 )

[node name="catpath1" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="follow" type="PathFollow2D" parent="catpath1"]
position = Vector2( 22.246, 265.641 )
rotation = -1.5708

[node name="cat" parent="catpath1/follow" groups=[
"cat",
] instance=ExtResource( 6 )]
rotation = 4.71239

[node name="catpath2" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 2 )

[node name="follow" type="PathFollow2D" parent="catpath2"]
position = Vector2( 54.2696, 260.857 )
rotation = -1.58583

[node name="cat" parent="catpath2/follow" groups=[
"cat",
] instance=ExtResource( 6 )]
rotation = 4.71239

[node name="catpath3" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 3 )

[node name="follow" type="PathFollow2D" parent="catpath3"]
position = Vector2( 167.205, 230.057 )
rotation = 1.57683

[node name="cat" parent="catpath3/follow" groups=[
"cat",
] instance=ExtResource( 6 )]
rotation = 4.71239

[node name="catpath4" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 4 )

[node name="follow" type="PathFollow2D" parent="catpath4"]
position = Vector2( 199.626, 151.164 )
rotation = -0.00549351

[node name="cat" parent="catpath4/follow" groups=[
"cat",
] instance=ExtResource( 6 )]
rotation = 4.71239

[node name="catpath5" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 5 )

[node name="follow" type="PathFollow2D" parent="catpath5"]
position = Vector2( 87.9441, 23.3323 )
rotation = 4.86521e-007

[node name="cat" parent="catpath5/follow" groups=[
"cat",
] instance=ExtResource( 6 )]
rotation = 4.71239

[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="success" from="Cheese" to="." method="_on_Cheese_success"]
